--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "^16.1.0-rc.0",
     "@angular/platform-browser-dynamic": "^16.1.0-rc.0",
     "@angular/router": "^16.1.0-rc.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "angular-in-memory-web-api": "~0.16.0",
     "express": "^4.18.2",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.4.3",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.2",
